# ocr-screen

./: .gitignore  README.md  install.bat  main.py  pyproject.toml  run_settings_win.py  setup.py
core/: __init__.py  bboxgrabber.py  bboxselector.py  context.py  hotkey.py  ocrmodel.py  preprocess.py  profile.py  settings_win.py  systray.py  user.py
core/setup/: __init__.py  external_dep.py  settingsdb.py
tests/: test_bboxgrabber.py  test_ocrmodel.py
